--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         }
     },
     "require": {
-        "php": ">=8.0",
-        "juzaweb/form-builder": "*"
+        "php": ">=8.0"
     },
     "require-dev": {
          "juzaweb/modules": "^1.0",
